Modified version of launch.sh and play_and_log.sh